修复编译问题，定位空指针问题源